made delete row a subclass with some members corresponding to various conditions